current weather/city is now dynamically reporting

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,38 +1,36 @@
 :root {
-    --primary: darkblue;
-    --secondary: lightblue;
-    --dark: #0b0b45;
-    --light-dark: skyblue;
-    --border-radius: .3rem;
+  --primary: darkblue;
+  --secondary: lightblue;
+  --dark: #0b0b45;
+  --light-dark: skyblue;
+  --border-radius: 0.3rem;
 }
 
-
-
 #header {
-    background-image: linear-gradient(to left, darkblue, lightblue);
-    text-align: center;
-    color: white;
-    border-bottom: 3px solid var(--dark);
+  background-image: linear-gradient(to left, darkblue, lightblue);
+  text-align: center;
+  color: white;
+  border-bottom: 3px solid var(--dark);
 }
 
 .card {
-    margin: 0 0 20px 0;
-    border: 3px solid var(--dark);
-    border-radius: var(--border-radius);
+  margin: 0 0 20px 0;
+  border: 3px solid var(--dark);
+  border-radius: var(--border-radius);
 }
 
 .card-header {
-    color: var(--secondary);
-    background-color: var(--dark);
-    padding: 2.5%;
-    border-radius: calc(.18rem - 1px) calc(.18rem - 1px) 0 0;
+  color: var(--secondary);
+  background-color: var(--dark);
+  padding: 2.5%;
+  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
 }
 
 .card-body {
-    padding: 2.5%;
-  }
+  padding: 2.5%;
+}
 
-  .form-label,
+.form-label,
 .form-input,
 .form-textarea {
   display: block;
@@ -44,50 +42,50 @@
 }
 
 .form-input {
-    width: 100%;
-    padding: 3%;
-    margin: 5px 0;
-    font-size: 1.2rem;
-    border: 2px solid var(--dark);
-    border-radius: var(--border-radius);
-  }
+  width: 100%;
+  padding: 3%;
+  margin: 5px 0;
+  font-size: 1.2rem;
+  border: 2px solid var(--dark);
+  border-radius: var(--border-radius);
+}
 
-  .btn {
-    font-size: 1.3rem;
-    text-decoration:none;
-    padding: 6px 5px;
-    width: 100%;
-    display: block;
-    margin: 5px 0;
-    border-radius: var(--border-radius);
-    color: var(--secondary);
-    border: none;
-    outline: none;
-    background-color: var(--dark);
-    box-shadow: 3px 3px var(--secondary);
-    transform: translate(-1px, -1px);
-  }
+.btn {
+  font-size: 1.3rem;
+  text-decoration: none;
+  padding: 6px 5px;
+  width: 100%;
+  display: block;
+  margin: 5px 0;
+  border-radius: var(--border-radius);
+  color: var(--secondary);
+  border: none;
+  outline: none;
+  background-color: var(--dark);
+  box-shadow: 3px 3px var(--secondary);
+  transform: translate(-1px, -1px);
+}
 
-  .btn:hover {
-    color: var(--primary);
-    background-color: var(--secondary);
-    transform: translate(0, 0);
-    box-shadow: 2px 2px var(--dark);
-  }
+.btn:hover {
+  color: var(--primary);
+  background-color: var(--secondary);
+  transform: translate(0, 0);
+  box-shadow: 2px 2px var(--dark);
+}
 
-  .btn-inline {
-    display: inline;
-  }
-
+.btn-inline {
+  display: inline;
+}
 
 .list-group {
-    padding: 0;
-    list-style: none;
-  }
+  padding: 0;
+  list-style: none;
+}
 
 .prev-city-item {
   font-size: 1.3rem;
-  text-decoration:none;
+  text-decoration: none;
+  font-weight: bolder;
   padding: 6px 5px;
   width: 100%;
   display: block;
@@ -99,8 +97,42 @@
   outline: none;
   background-color: var(--secondary);
   box-shadow: 3px 3px var(--dark);
-  transform: translate(-1px, -1px);  
+  transform: translate(-1px, -1px);
   text-align: center;
+}
+
+.current-card {
+  margin: 0 0 20px 0;
+  border: 3px solid var(--dark);
+  border-radius: var(--border-radius);
+  /* display: none; */
+}
+
+#current-temp, #current-wind, #current-hum {
+  font-size: 2.0rem;
+  text-decoration: none;
+  font-weight: bolder;
+  padding: 6px 5px;
+  width: 100%;
+  display: block;
+  /* margin: 5px 0; */
+  margin-top: 3%;
+  border-radius: var(--border-radius);
+  color: var(--dark);
+  border: none;
+  outline: none;
+  background-color: var(--secondary);
+  box-shadow: 3px 3px var(--dark);
+  transform: translate(-1px, -1px);
+  text-align: center;
+
+}
+
+.five-day-card {
+  margin: 0 0 20px 0;
+  border: 3px solid var(--dark);
+  border-radius: var(--border-radius);
+  /* display: none; */
 }
 
 /* .hide {
