--- a/assets/styles.css
+++ b/assets/styles.css
@@ -135,6 +135,26 @@
   /* display: none; */
 }
 
+.five-day-card p {
+  font-size: 2.0rem;
+  text-decoration: none;
+  font-weight: bolder;
+  padding: 6px 5px;
+  width: 100%;
+  display: block;
+  /* margin: 5px 0; */
+  margin-top: 3%;
+  border-radius: var(--border-radius);
+  color: var(--dark);
+  border: none;
+  outline: none;
+  background-color: var(--secondary);
+  box-shadow: 3px 3px var(--dark);
+  transform: translate(-1px, -1px);
+  text-align: center;
+
+}
+
 /* .hide {
     display: none;
 } */
