--- a/assets/styles.css
+++ b/assets/styles.css
@@ -101,6 +101,14 @@
   text-align: center;
 }
 
+.prev-city-item:hover {
+  cursor: pointer;
+}
+
+.prev-city-item:active {
+  transform: translateY(4px);
+}
+
 .current-card {
   margin: 0 0 20px 0;
   border: 3px solid var(--dark);
